Fix small-screen cart wrap and update lunch/dinner links

--- a/css/tooplate-crispy-kitchen.css
+++ b/css/tooplate-crispy-kitchen.css
@@ -402,6 +402,9 @@ strong {
 .site-breakfast-header {
   background-image: url("../images/breakfast.jpg");
 }
+.site-dinner-header {
+  background-image: url("../images/dinner.jpg");
+}
 
 .site-news-header {
   background-image: url("../images/header/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg");
